--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
 
   <footer>
     <p>&copy; Company 2018</p>
+    <small>Copyright &copy; <a href="https://github.com/3bsalam">Mostafa Abdelsalam</a></small>
   </footer>
 
 </div> <!-- /container -->
